@@ -1254,7 +1254,7 @@ containing all of the search terms will appear in the result).",
 'resultsperpage' => 'Hits per page:',
 'contextlines'	=> 'Lines per hit:',
 'contextchars'	=> 'Context per line:',
-'stubthreshold' => 'Threshold for stub display:',
+'stub-threshold' => 'Threshold for <span class="mw-stub-example">stub link</span> formatting:',
 'recentchangesdays' => 'Days to show in recent changes:',
 'recentchangescount' => 'Number of edits to show in recent changes:',
 'savedprefs'	=> 'Your preferences have been saved.',
